# rusqlite-model

./: Cargo.toml  README.md
rusqlite-model/: Cargo.toml  lib.rs
rusqlite-model-derive/: Cargo.toml
src/: lib.rs
