[package]
name = "rusqlite-model-derive"
description = "Derive implementation for `rusqlite_model::Model`"
license = "MIT"
authors = ["OJFord"]
repository = "https://github.com/OJFord/rusqlite-model"
version = "0.1.0"
edition = "2018"

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = [ "extra-traits", "parsing" ] }

[lib]
path = "lib.rs"
proc-macro = true
