[package]
name = "rusqlite-model"
description = "Model trait for structs into or from `rusqlite` SQLite connections"
license = "MIT"
authors = ["OJFord"]
repository = "https://github.com/OJFord/rusqlite-model"
version = "0.1.0"
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
rusqlite = "0.24"
rusqlite-model-derive = { version = "0.1", path = "../rusqlite-model-derive" }
